--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aurora de Luz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header>
       <nav class="navBar">
-        <img src="/docs/static/LogoCLett.png" alt="Logotipo com lettering">
+        <img src="static/LogoCLett.png" alt="Logotipo com lettering">
         <ul class="nav nav-underline">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Active</a>
