--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aurora de Luz</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <title>Aurora de Luz</title>
   </head>
   <body>
     <header>
       <nav class="navBar">
         <img src="static/LogoCLett.png" alt="Logotipo com lettering">
+        <div>
+          <span class="material-symbols-outlined">
+            menu
+          </span>
+        </div>
       </nav>
-
     </header>
   </body>
 </html>
