--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <header>
       <nav class="navBar">
-        <img src="static/LogoCLett.png" alt="Logotipo com lettering">
+        <a href="index.html"><img src="static/LogoCLett.png" alt="Logotipo com lettering"></a>
         <div>
-          <span class="material-symbols-outlined">
-            menu
-          </span>
+          <span class="material-symbols-outlined">menu</span>
+          <ul>
+            <li><a href="#">HOME</a></li>
+          </ul>
         </div>
       </nav>
     </header>
