--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       <nav class="navBar">
         <a href="index.html"><img src="static/LogoCLett.png" alt="Logotipo com lettering"></a>
         <div>
-          <span class="material-symbols-outlined">menu</span>
-          <ul>
+          <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
+          <ul id="menu" >
             <li><a href="#">HOME</a></li>
           </ul>
         </div>
       </nav>
     </header>
+    <script src="script/script.js"></script>
   </body>
 </html>
