Adjusting the lettering

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   </head>
   <body>
     <header>
-      <nav class="navBar">
-        <a href="index.html"><img src="static/LogoCLett.png" alt="Logotipo com lettering"></a>
+      <div id="logo">
+        <a href="index.html"><img src="static/LogotipoSLett.png" alt="Logotipo com lettering"></a>
+        <a href="index.html">
+          <p>Aurora de Luz</p>
+        </a>
+      </div>
         <div>
           <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
           <ul id="menu" >
             <li><a href="#">HOME</a></li>
           </ul>
         </div>
-      </nav>
     </header>
     <script src="script/script.js"></script>
   </body>
