Revert "First js"
This reverts commit b6631f736d6ba93eb32963ddf2250219991f1796.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
         </a>
       </div>
         <div>
-          <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
-          <ul id="menu" >
+          <span class="material-symbols-outlined">menu</span>
+          <ul>
             <li><a href="#">HOME</a></li>
           </ul>
         </div>
     </header>
-    <script src="script/script.js"></script>
   </body>
 </html>
