--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <a href="index.html"><img src="static/Logo_2.png" alt="Logotipo da empresa"></a>
+        <a href="index.html"><img src="static/logo_2.png" alt="Logotipo da empresa"></a>
         <div>
           <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
           <ul id="menu" >
