--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-        <a href="index.html"><img src="static/logo_2.png" alt="Logotipo da empresa"></a>
+        <img src="static/logo_2.png" alt="Logotipo da empresa" srcset="index.html">
         <div>
           <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
-          <ul id="menu" >
+          <ul id="menu">
             <li><a href="#">HOME</a></li>
           </ul>
         </div>
