--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <img src="static/logo_2.png" alt="Logotipo da empresa" srcset="index.html">
+          <img id="image" src="static/logo_2.png" alt="Logo da empresa">
         <div>
           <span class="material-symbols-outlined" onclick="menuopen()">menu</span>
           <ul id="menu">
