--- a/index1.html
+++ b/index1.html
@@ -12,12 +12,17 @@
             <a href="index1.html"><img id="logo" src="static/logo_2.png" alt="Logo da empresa"></a>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
-                <ul id="menu">
-                    <li><a href="#">HOME</a></li>
-                </ul>
             </nav>
         </header>
         <main>
+            <div id="menuDrop">
+                <ul id="menu">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
+                </ul>
+            </div>
             
         </main>
 
