--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>
-            <a href="index1.html"><img id="logo" src="static/logo_2.png" alt="Logo da empresa"></a>
+            <a href="index1.html"><img id="logo" src="static/Logo.png" alt="Logo da empresa"></a>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
@@ -20,6 +20,7 @@
                     <li><a href="#">HOME</a></li>
                 </ul>
             </div>
+            <img src="static/Lettering.png" alt="">
         </main>
 
         <footer>
