--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>
-            <a href="index1.html"><img id="logo" src="static/logo_2.png" alt="Logo da empresa"></a>
+            <a href="index1.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
@@ -17,6 +17,9 @@
         <main>
             <div id="menuDrop">
                 <ul id="menu">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
                     <li><a href="#">HOME</a></li>
                 </ul>
             </div>
