--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
                     <li><a href="#">HOME</a></li>
                 </ul>
             </div>
-            <img src="static/Lettering.png" alt="">
+            <img src="static/Lettering-2.png" alt="">
         </main>
 
         <footer>
