imagens de fundo

--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,9 @@
                     <li><a href="#">HOME</a></li>
                 </ul>
             </div>
-            <img src="static/Lettering-2.png" alt="">
+            <section class="imagem-sec">
+                <img class="imagem" src="static/Lettering-2.png" alt="">
+            </section>
         </main>
 
         <footer>
