--- a/index1.html
+++ b/index1.html
@@ -13,8 +13,6 @@
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
-        </header>
-        <main>
             <div id="menuDrop">
                 <ul id="menu">
                     <li><a href="#">HOME</a></li>
@@ -23,8 +21,14 @@
                     <li><a href="#">HOME</a></li>
                 </ul>
             </div>
+        </header>
+        <main>
             <section class="imagem-sec">
                 <img class="imagem" src="static/Lettering-2.png" alt="">
+            </section>
+            
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
             </section>
         </main>
 
