Footer,  paragrafo background color

--- a/index1.html
+++ b/index1.html
@@ -27,13 +27,20 @@
                 <img class="imagem" src="static/Lettering-2.png" alt="">
             </section>
             
-            <section>
+            <section class="descrição">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
             </section>
         </main>
 
         <footer>
-
+            <section class="footer">
+                <p>
+                    Site criado por Bruno Brás
+                </p>
+            </section>
         </footer>
         <script src="script/script_1.js"></script>
     </body>
