--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style1.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <title>Aurora de Luz</title>
 </head>
     <body>
         <header>
-            <a href="index1.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
+            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
@@ -42,6 +42,6 @@
                 </p>
             </section>
         </footer>
-        <script src="script/script_1.js"></script>
+        <script src="script/script.js"></script>
     </body>
 </html>
