--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
             </nav>
             <div id="menuDrop">
                 <ul id="menu">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Contatos</a></li>
                 </ul>
             </div>
         </header>
