--- a/contactos.html
+++ b/contactos.html
@@ -22,15 +22,8 @@
             </div>
         </header>
         <main>
-            <section class="imagem-sec">
-                <img class="imagem" src="static/Lettering-2.png" alt="">
-            </section>
-            
             <section class="descrição">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
+               <H2>TODO</H2>
             </section>
         </main>
 
