--- a/serviços.html
+++ b/serviços.html
@@ -15,7 +15,7 @@
             </nav>
             <div id="menuDrop">
                 <ul id="menu">
-                    <li><a href="/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="serviços.html">Serviços</a></li>
                     <li><a href="contactos.html">Contatos</a></li>
                 </ul>
