Whats app buttton

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Aurora de Luz</title>
 </head>
     <body>
@@ -23,10 +23,12 @@
         </header>
         <main>
             <section class="imagem-sec">
+                <button>Contacte <img src="static/whatsapp.png" alt=""></button>
                 <img class="imagem" src="static/Lettering-2.png" alt="">
             </section>
             
             <section class="descrição">
+                <h1>Quem Somos</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
