--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
             </div>
         </header>
         <main>
-            <section class="imagem-sec">
-                <img class="imagem" src="static/Lettering-2.png" alt="">    
+            <section class="imagem-cnt" id="img1">
+                <!-- 
+                    <img class="imagem" src="static/Lettering-2.png" alt="Imagem de pedras em equilibrio, com o nome da empresa Aurora de Luz">
+                -->
+                <div class="whatsappbtn">
+                    <p>Contactar</p>
+                    <img src="static/whatsapp.png" alt="" width="35px" height="35px">
+                </div>
             </section>
             <section class="descrição">
                 <h1>Quem Somos</h1>
