Whats app Button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <p>Contactar</p>
                     <img src="static/whatsapp.png" alt="" width="35px" height="35px">
                 </div>
+                <img src="static/Lettering-2.png" alt="">
             </section>
             <section class="descrição">
                 <h1>Quem Somos</h1>
