Position whats app button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </header>
         <main>
             <section class="imagem-cnt" id="img1">
-                <div class="whatsappbtn">
+                <div class="whatsappbtn" onclick="newMessage()">
                     <p>Contactar</p>
-                    <img src="static/whatsapp.png" alt="" width="35px" height="35px">
+                    <img src="static/whatsapp.png" alt="" width="30px" height="30px">
                 </div>
                 <img src="static/Lettering-2.png" alt="">
             </section>
