--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>Contactar</p>
                     <img src="static/whatsapp.png" alt="" width="30px" height="30px">
                 </div>
-                <img src="static/Lettering-2.png" alt="">
+                <img src="static/terapiasQuadrado.png" alt="">
             </section>
             <section class="descrição">
                 <h1>Quem Somos</h1>
