--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Sriracha&display=swap" rel="stylesheet"> 
     <title>Aurora de Luz</title>
 </head>
     <body>
         <header>
             <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
+            <div class="lettering">
+                <h1>Aurora de Luz</h1>
+                <h2>Centro de Terapias de Gaia</h2>
+            </div>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
