--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="static/font/fontstylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,10 +31,6 @@
         </header>
         <main>
             <section class="imagem-cnt" id="img1">
-                <div class="whatsappbtn" onclick="newMessage()">
-                    <p>Contactar</p>
-                    <img src="static/whatsapp.png" alt="" width="30px" height="30px">
-                </div>
                 <img src="static/terapiasQuadrado.png" alt="">
             </section>
             <section class="descrição">
