Acerto do scroll vertical

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
     <body>
         <header>
-            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
-            <div class="lettering">
-                <h1>Aurora de Luz</h1>
-                <h2>Centro de Terapias de Gaia</h2>
-            </div>
+            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
+            </a>
+                <div class="lettering">
+                    <h1>Aurora de Luz</h1>
+                    <h2>Centro de Terapias de Gaia</h2>
+                </div>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
