--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img src="static/terapiasQuadrado.png" alt="">
             </section>
             <section class="descrição">
-                <h1>Quem Somos</h1>
+                <h1>Sobre o Aurora de Luz</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
