--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
             </section>
             <section class="descrição">
                 <h1>Sobre o Aurora de Luz</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, aliquam earum quia quis facilis et, temporibus vitae mollitia architecto totam numquam obcaecati doloremque iste suscipit itaque, sed qui? Quos, laboriosam.</p>
+                <p>
+                    Aurora de Luz surgiu da junção de duas palavras muito representativas: <br>
+                    Aurora = amanhecer, momento de transição do escuro para a luz, símbolo de um novo começo <br>
+                    Luz = clareza, conhecimento e cura espiritual</p>
+                    <p>Um nome que define a nossa missão de cura, renovação espiritual e iluminação pessoal. </p>
+                    <p>O nosso Centro de Terapias é um espaço vocacionado para a cura de uma forma holística, onde nos dedicamos a cuidar de quem nos chega de forma única e de acordo com as necessidades individuais de cada um.</p>
+                    <p>Aqui intencionamos trazer ao público que nos procura uma proposta de equilíbrio nas suas vidas, através de terapias de cura e auto-cura dos processos dos corpos físico, emocional, mental e espiritual.</p>
+                    <p>Primamos pela formação constante nas terapias oferecidas e por uma interação de diversas fontes de conhecimento.</p>
+                    <p>
+                    Por outro lado dispomos também de uma loja online e física (brevemente) onde disponibilizamos produtos de alta qualidade a pensar nos nossos clientes: produtos de bem-estar, decoração, cristais, florais, gift boxes, óleos essenciais, bijuteria, velas….</p>
             </section>
         </main>
 
