--- a/serviços.html
+++ b/serviços.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-
+    <link rel="stylesheet" href="static/font/fontstylesheet.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Sriracha&display=swap" rel="stylesheet"> 
     <title>Aurora de Luz</title>
 </head>
     <body>
         <header>
-            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa"></a>
+            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
+                <div class="lettering">
+                    <h1>Aurora de Luz</h1>
+                    <h2>Centro de Terapias de Gaia</h2>
+                </div>
+            </a>
             <nav>
                 <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
@@ -22,9 +31,7 @@
             </div>
         </header>
         <main>
-            <section class="descrição">
-               <H2>TODO</H2>
-            </section>
+            <h1>TODO</h1>
         </main>
 
         <footer>
