--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                     <strong>Luz</strong> = clareza, conhecimento e cura espiritual. <br>
                     Um nome que define a nossa missão de cura, renovação espiritual e iluminação pessoal. </p>
                     <p>O nosso Centro de Terapias é um espaço vocacionado para a cura de uma forma holística, onde nos dedicamos a cuidar de quem nos chega de forma única e de acordo com as necessidades individuais de cada um. <br>
-                    Aqui intencionamos trazer ao público que nos procura uma proposta de equilíbrio nas suas vidas, através de terapias de cura e auto-cura dos processos dos corpos físico, emocional, mental e espiritual. <br>
-                    Primamos pela formação constante nas terapias oferecidas e por uma interação de diversas fontes de conhecimento.</p>
-                    <p>
-                    Por outro lado dispomos também de uma loja online e física (brevemente) onde disponibilizamos produtos de alta qualidade a pensar nos nossos clientes: produtos de bem-estar, decoração, cristais, florais, gift boxes, óleos essenciais, bijuteria, velas….</p>
-            </section>
-        </main>
-
-        <footer>
+                        Aqui intencionamos trazer ao público que nos procura uma proposta de equilíbrio nas suas vidas, através de terapias de cura e auto-cura dos processos dos corpos físico, emocional, mental e espiritual. <br>
+                        Primamos pela formação constante nas terapias oferecidas e por uma interação de diversas fontes de conhecimento.</p>
+                        <p>
+                            Por outro lado dispomos também de uma loja online e física (brevemente) onde disponibilizamos produtos de alta qualidade a pensar nos nossos clientes: produtos de bem-estar, decoração, cristais, florais, gift boxes, óleos essenciais, bijuteria, velas….</p>
+                        </section>
+                        <h2>Sobre o Aurora de Luz</h2>
+                    </main>
+                    
+                    <footer>
             <section class="footer">
                 <p>
                     Site criado por Bruno Brás
