Pequenas acertos no footer

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                         <p>
                             Por outro lado dispomos também de uma loja online e física (brevemente) onde disponibilizamos produtos de alta qualidade a pensar nos nossos clientes: produtos de bem-estar, decoração, cristais, florais, gift boxes, óleos essenciais, bijuteria, velas….</p>
                         </section>
-                        <h2>Sobre o Aurora de Luz</h2>
+                        <h2>As nossas terapias</h2>
                     </main>
                     
                     <footer>
             <section class="footer">
                 <p>
-                    Site criado por Bruno Brás
+                    Site criado por <strong>BB Produções</strong>
                 </p>
             </section>
         </footer>
